add delete webhook info to readme and openapi
